# CrewAI-Command-Center

./: .gitattributes  .gitignore  DOCKER_DEPLOYMENT_GUIDE.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  docker-setup.md
backend/: .env.example  Dockerfile  README.md  activity_store.py  agent_library.py  crew_broadcast.py  crew_manager.py  crew_runtime.py  crew_storage.py  crew_templates.py  docker-entrypoint.sh  main.py  metadata_discovery.py  metrics_store.py  pytest.ini  requirements-test.txt  requirements.txt
backend/tests/: conftest.py  test_activity_store.py  test_activity_store_persistence.py  test_agent_library_persistence.py  test_cleanup_scheduler.py  test_crew_actions.py  test_crew_manager_discovery.py  test_crew_manager_input_extraction.py  test_crew_manager_logging.py  test_crew_manager_process.py  test_crew_runtime.py  test_crew_templates.py  test_crews_directory_runtime.py  test_crews_observer.py  test_crews_watcher.py  test_env_endpoints.py  test_import_crew.py  test_main_endpoints.py  test_metrics_store.py  test_request_metrics_persistence.py  test_socketio_streaming.py  test_system_stats.py  test_system_stats_history.py
backend/tests/integration/: test_api_endpoints.py  test_run_crew_integration.py
backend/tests/unit/: test_crew_manager.py  test_crew_manager_additional.py  test_crew_manager_additional2.py  test_crew_manager_additional3.py  test_main_additional.py  test_main_additional2.py  test_main_additional3.py  test_main_additional4.py  test_main_additional5.py  test_main_additional6.py  test_main_additional7.py  test_main_additional8.py
crews/academic-essay-humanizer/: README.md  pyproject.toml
crews/academic-essay-humanizer/src/academic_essay_humanizer/: __init__.py  crew.py  main.py
crews/academic-essay-humanizer/src/academic_essay_humanizer/config/: agents.yaml  crew.json  tasks.yaml
crews/example_crew/: README.md  pyproject.toml
crews/example_crew/src/example_crew/: main.py
crews/example_crew/src/example_crew/config/: agents.yaml  crew.json  tasks.yaml
crews/news_notes_web_brief_generator/: README.md  pyproject.toml
crews/news_notes_web_brief_generator/src/news_notes_web_brief_generator/: crew.py  main.py
crews/news_notes_web_brief_generator/src/news_notes_web_brief_generator/config/: agents.yaml  tasks.yaml
crews/pdf_txt_spotlight_qa/: README.md  pyproject.toml
crews/pdf_txt_spotlight_qa/src/pdf_txt_spotlight_qa/: __init__.py  crew.py  main.py
crews/pdf_txt_spotlight_qa/src/pdf_txt_spotlight_qa/config/: agents.yaml  crew.json  tasks.yaml
crews/regional_fraud_intelligence_automation/: README.md  pyproject.toml
crews/regional_fraud_intelligence_automation/src/regional_fraud_intelligence_automation/: crew.py  main.py
crews/regional_fraud_intelligence_automation/src/regional_fraud_intelligence_automation/config/: agents.yaml  crew.json  tasks.yaml
crews/research_driven_how_to_guide/: .env.example  README.md  pyproject.toml
crews/research_driven_how_to_guide/outputs/: crewai-first-workflow.md  how_to_guide_20250921_173108.md
crews/research_driven_how_to_guide/src/research_driven_how_to_guide_creator/: crew.py  main.py
crews/research_driven_how_to_guide/src/research_driven_how_to_guide_creator/config/: agents.yaml  tasks.yaml
crews/research_driven_how_to_guide/src/research_driven_how_to_guide_creator/scripts/: test_notion.py
crews/research_driven_how_to_guide/src/research_driven_how_to_guide_creator/tools/: file_tools.py  notion_tools.py  safe_file_writer.py
docs/: appendix.txt  architecture.md  crew-catalog.md  crew-optional-dependencies.md  deployment.md  features.md  tech-stack.md  troubleshooting.md
frontend/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  nginx.conf.template  package-lock.json  package.json  tailwind.config.js
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/coverage/lcov-report/: App.js.html  index.html  index.js.html  reportWebVitals.js.html
frontend/public/: index.html
frontend/src/: App.js  App.test.js  index.css  index.js  setupTests.js
frontend/src/__mocks__/: jest-axe.js  recharts.js  socket.io-client.js
frontend/src/components/: ConfigEditor.jsx  ConfirmDialog.jsx  CrewCard.jsx  CrewEditorForm.jsx  CrewInputsForm.jsx  crewInputUtils.js
frontend/src/config/: apiConfig.js
frontend/src/hooks/: useSystemStats.js  useSystemStatsHistory.js  useThemePreference.js  useUserPreferences.js
(+68 files in other folders)
