[tool.poetry]
name = "academic-essay-humanizer"
version = "0.1.0"
description = "Crew that rewrites drafts into academic prose with selectable citation styles"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = ">=0.88,<1.0"}

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "academic-essay-humanizer"
version = "0.1.0"
description = "Crew that rewrites drafts into academic prose with selectable citation styles"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]
