[project]
name = "pdf_txt_spotlight_qa"
version = "0.1.0"
description = "PDF + TXT Spotlight Q&A crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0"
]

[project.scripts]
pdf_txt_spotlight_qa = "pdf_txt_spotlight_qa.main:main"
run_crew = "pdf_txt_spotlight_qa.main:run"
train = "pdf_txt_spotlight_qa.main:train"
replay = "pdf_txt_spotlight_qa.main:replay"
test = "pdf_txt_spotlight_qa.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
