[project]
name = "regional_fraud_intelligence_automation"
version = "0.1.0"
description = "regional_fraud_intelligence_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
regional_fraud_intelligence_automation = "regional_fraud_intelligence_automation.main:run"
run_crew = "regional_fraud_intelligence_automation.main:run"
train = "regional_fraud_intelligence_automation.main:train"
replay = "regional_fraud_intelligence_automation.main:replay"
test = "regional_fraud_intelligence_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
