[project]
name = "research_driven_how_to_guide_creator"
version = "0.1.0"
description = "research_driven_how_to_guide_creator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
research_driven_how_to_guide_creator = "research_driven_how_to_guide_creator.main:run"
run_crew = "research_driven_how_to_guide_creator.main:run"
train = "research_driven_how_to_guide_creator.main:train"
replay = "research_driven_how_to_guide_creator.main:replay"
test = "research_driven_how_to_guide_creator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
